--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Mayank Kumar is a Front End Web Developer and a Competitive Programmer. He is a 3rd year student at JUIT Waknaghat, HP."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -16,6 +16,14 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="keywords" content="portfolio, racinmk, mkr-29, mayank, mayank kumar, mkportfolio, mayank's portfolio, mayank juit, mayank kumar juit, mayank kumar jypee, mayank jaypee, mayank web developer">
+    <meta name="author" content="Mayank Kumar">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Mayank Kumar">
+    <meta property="og:description" content="This is a personal portfolio of Mayank Kumar, a student in JUIT pursuing B.Tech CSE, a front end web developer.">
+    <meta property="og:url" content="tinyurl.com/racinmk">
+
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
